Admin panel: Ã‡oklu dil desteÄŸi, modal formlar, gÃ¶rsel yÃ¼kleme ve ayarlar sayfasÄ± eklendi

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "hash:admin-password": "node scripts/hash-admin-password.mjs"
   },
   "dependencies": {
     "@types/uuid": "^10.0.0",
@@ -18,7 +19,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20",
