--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "hash:admin-password": "node scripts/hash-admin-password.mjs"
+    "hash:admin-password": "node scripts/hash-admin-password.mjs",
+    "migrate:mongodb": "node scripts/migrate-to-mongodb.mjs"
   },
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.554.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.4",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
@@ -28,6 +30,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
     "babel-plugin-react-compiler": "1.0.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
     "postcss": "^8.5.6",
