--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,13 +7,15 @@ services:
       - "27017:27017"
     environment:
       - MONGO_INITDB_DATABASE=appykod
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USERNAME:-mongo_admin}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
     volumes:
       - mongodb_data:/data/db
       - mongodb_config:/data/configdb
     networks:
       - appykod-network
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/appykod --quiet
+      test: mongosh --eval "db.adminCommand('ping')" -u ${MONGO_ROOT_USERNAME:-mongo_admin} -p ${MONGO_ROOT_PASSWORD} --quiet || exit 1
       interval: 10s
       timeout: 5s
       retries: 5
@@ -27,7 +29,9 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - ME_CONFIG_MONGODB_URL=mongodb://mongodb:27017/
+      - ME_CONFIG_MONGODB_URL=mongodb://${MONGO_ROOT_USERNAME:-mongo_admin}:${MONGO_ROOT_PASSWORD}@mongodb:27017/
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_ROOT_USERNAME:-mongo_admin}
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_ROOT_PASSWORD}
       - ME_CONFIG_BASICAUTH_USERNAME=admin
       - ME_CONFIG_BASICAUTH_PASSWORD=admin
     depends_on:
