--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.554.0",
     "mongoose": "^9.0.1",
     "next": "16.0.4",
