--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,20 +35,6 @@ services:
       - NODE_ENV=production
       - MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME:-mongo_admin}:${MONGO_ROOT_PASSWORD}@mongodb:27017/${MONGODB_DB_NAME:-appykod}?authSource=admin
       - MONGODB_DB_NAME=appykod
-    labels:
-      # Traefik labels
-      - "traefik.enable=true"
-      - "traefik.docker.network=birce_birce-network"
-      - "traefik.http.routers.appykod.rule=Host(`appykod.com`) || Host(`www.appykod.com`)"
-      - "traefik.http.routers.appykod.entrypoints=websecure"
-      - "traefik.http.routers.appykod.tls.certresolver=letsencrypt"
-      - "traefik.http.services.appykod.loadbalancer.server.port=3000"
-      # HTTP to HTTPS redirect
-      - "traefik.http.routers.appykod-http.rule=Host(`appykod.com`) || Host(`www.appykod.com`)"
-      - "traefik.http.routers.appykod-http.entrypoints=web"
-      - "traefik.http.routers.appykod-http.middlewares=redirect-to-https"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
     expose:
       - "3000"
     volumes:
@@ -58,6 +44,31 @@ services:
         condition: service_healthy
     networks:
       - web-network
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./nginx/certbot/conf:/etc/letsencrypt:ro
+      - ./nginx/certbot/www:/var/www/certbot:ro
+    depends_on:
+      - web
+    networks:
+      - web-network
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./nginx/certbot/conf:/etc/letsencrypt:rw
+      - ./nginx/certbot/www:/var/www/certbot:rw
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
   mongodb_data:
