--- a/nginx/conf.d/sonarqube.appykod.com.conf
+++ b/nginx/conf.d/sonarqube.appykod.com.conf
@@ -20,5 +20,6 @@ server {
         proxy_read_timeout 300s;
         proxy_connect_timeout 300s;
         proxy_send_timeout 300s;
+        proxy_buffering off;
     }
 }
