--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,6 +113,46 @@ services:
         soft: 65536
         hard: 65536
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+    container_name: elasticsearch
+    restart: unless-stopped
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=false
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    networks:
+      - web-network
+    expose:
+      - "9200"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s http://localhost:9200 -u elastic:${ELASTIC_PASSWORD} | grep -q 'cluster_name'"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.11.0
+    container_name: kibana
+    restart: unless-stopped
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=kibana_system
+      - ELASTICSEARCH_PASSWORD=${KIBANA_SYSTEM_PASSWORD}
+      - SERVER_PUBLICBASEURL=https://kibana.appykod.com
+    networks:
+      - web-network
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+    expose:
+      - "5601"
+
 volumes:
   mongodb_data:
     driver: local
@@ -125,6 +165,8 @@ volumes:
   sonarqube_extensions:
     driver: local
   sonarqube_logs:
+    driver: local
+  elasticsearch_data:
     driver: local
 
 networks:
